# vectorg-engine-js

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  package-lock.json  package.json  publish_all_canary.sh  publish_all_prod.sh
.github/: FUNDING.yml
.github/workflows/: vectorg-engine-js-ci.yml
builds/prepare_builds/: prepare_all_projects.sh
src/: lib.rs  math.rs  utils.rs
src.ts/: init.ts  raw.ts
src.ts/control/: ray_cast_vehicle_controller.ts
src.ts/dynamics/: rigid_body.ts  rigid_body_set.ts
src.ts/geometry/: collider.ts  collider_set.ts  shape.ts
src.ts/pipeline/: world.ts
src/control/: character_controller.rs  mod.rs  pid_controller.rs  ray_cast_vehicle_controller.rs
src/dynamics/: ccd_solver.rs  impulse_joint.rs  impulse_joint_set.rs  integration_parameters.rs  island_manager.rs  joint.rs  multibody_joint.rs  multibody_joint_set.rs  rigid_body.rs  rigid_body_set.rs
src/geometry/: broad_phase.rs  collider.rs  collider_set.rs  contact.rs  feature.rs  mod.rs  narrow_phase.rs  point.rs  ray.rs  shape.rs  toi.rs
src/pipeline/: debug_render_pipeline.rs  event_queue.rs  physics_hooks.rs  physics_pipeline.rs  query_pipeline.rs  serialization_pipeline.rs
testbed2d/: package-lock.json  package.json  publish.sh
testbed2d/src/: Graphics.ts  Testbed.ts  index.ts
testbed2d/static/: index.html
testbed3d/: package-lock.json  package.json  publish.sh
vectorg-engine-compat/: README.md  build-rust.sh  fix_raw_file.sh  gen_src.sh  package-lock.json  package.json  rollup.config.js  tsconfig.pkg2d.json  tsconfig.pkg3d.json
(+47 files in other folders)
