[workspace]
members = ["builds/*"]
resolver = "2"

[profile.release]
debug = false
codegen-units = 1
#lto = true
strip = true # Workaround for https://github.com/bevyengine/bevy/issues/16030 (the bug only happens in 2D)

[patch.crates-io]
#vectorg-engine-2d = { path = "../vectorg-engine/crates/vectorg-engine-2d" }
vectorg-engine = { path = "../vectorg-engine/crates/vectorg-engine" }
#parry2d = { path = "../parry/crates/parry2d" }
#parry3d = { path = "../parry/crates/parry3d" }
#nalgebra = { path = "../nalgebra" }
#simba = { path = "../simba" }

#nalgebra = { git = "https://github.com/dimforge/nalgebra", branch = "dev" }
#vectorg-engine-2d = { git = "https://github.com/VectorGEngine/vectorg-engine" }
#vectorg-engine = { git = "https://github.com/VectorGEngine/vectorg-engine" }
#parry2d = { git = "https://github.com/dimforge/parry" }
#parry3d = { git = "https://github.com/dimforge/parry" }
